Fix cart padding on mobile devices.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -341,10 +341,10 @@ text-align: end;
 }
 .cart-container{
   height: 100vh;
-  width: 600px;
+  width: 500px;
   background-color: white;
   float: right;
-  padding: 40px 10px;
+  padding: 40px 10px 40px 10px;
   position: relative;
   
 }
